--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,15 +2,15 @@
     <div class="nav">
       <ul>
         <li><img src="#" alt="メインページ" title="メインページへ"></li>
-        <li class="head-btn1"><%= link_to "マイページ", root_path, class:"btn_link" %></li>
+        <li class="head-btn1"><%= link_to "current_user.nickname", "#", class:"btn_link" %></li>
         <li class="head-btn2"><%= link_to "商品ページ", root_path, class:"btn_link" %></li>
         <li class="head-btn3"><%= link_to "相談ページ", root_path, class:"btn_link" %></li>
-        <%# if user_signed_in? %>
-          <li class="head-btn4"><%= link_to "ログアウト", root_path, class: "btn_link" %></li>
-        <% #else %>
-          <li class="head-btn5"><%= link_to "ログイン", root_path, class: "btn_link" %></li>
-          <li class= "head-btn6"><%= link_to "新規登録", root_path, class: "btn_link" %></li>
-        <%# end %>
+        <% if user_signed_in? %>
+          <li class="head-btn4"><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "btn_link" %></li>
+        <% else %>
+          <li class="head-btn5"><%= link_to "ログイン", new_user_session_path, class: "btn_link" %></li>
+          <li class= "head-btn6"><%= link_to "新規登録", new_user_registration_path, class: "btn_link" %></li>
+        <% end %>
       </ul>
     </div>
   </div>
