マイページトップの実装

--- a/app/assets/stylesheets/shared/header.scss
+++ b/app/assets/stylesheets/shared/header.scss
@@ -22,6 +22,10 @@
         text-align: center;
       }
 
+      .head-btn0{
+        background-color: white;
+      }
+
         .head-btn1{
           background-image: image-url('animalface_duck.png');
           background-size: cover;
