--- a/app/assets/stylesheets/pics/index.scss
+++ b/app/assets/stylesheets/pics/index.scss
@@ -26,6 +26,9 @@
   background-color: yellowgreen;
 
   .pic-contents{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     .title{
       font-size: 50px;
@@ -34,40 +37,46 @@
 
     .pic-lists{
       display: flex;
-      justify-content: space-around;
-      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
 
       li{
         list-style: none;
       }
 
       .list{
-        width: 30%;
-        height: 30%;
+        width: 350px;
+        height: 50vh;
         margin: 20px;
         background-color: yellow;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+
 
         .pic-img-content{
-          display: flex;
-          justify-content: center;
+          
         }
 
         .pic-img{
-          width: 90%;
-          height: 80%;
+          width: 300px;
+          height: 25vh;
           margin: 10px;
           background-color: white;
         }
 
         .pic-info{
-          .pic-title{
+          .pic-title p{
+            font-size: 15px;
           }
 
           .pic-text{
 
             .text-box{
+              width: 300px;
+              height: 10vh;
               padding: 5px;
-              margin: 10px;
+              margin: 5px;
               background-color: white;
             }
 
