--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,8 +1,8 @@
 <div class="header">
     <div class="nav">
       <ul>
-        <li><img src="#" alt="メインページ" title="メインページへ"></li>
-        <li class="head-btn1"><%= link_to "current_user.nickname", "#", class:"btn_link" %></li>
+        <li class="head-btn0"><%= link_to image_tag("animalface_tanuki.png", size: '100x100', class: "btn_link"), root_path %></li>
+        <li class="head-btn1"><%= link_to "マイページ", albums_path(current_user), class:"btn_link" %></li>
         <li class="head-btn2"><%= link_to "商品ページ", root_path, class:"btn_link" %></li>
         <li class="head-btn3"><%= link_to "相談ページ", root_path, class:"btn_link" %></li>
         <% if user_signed_in? %>
