新規登録画面の実装

--- a/app/views/pics/index.html.erb
+++ b/app/views/pics/index.html.erb
@@ -16,26 +16,26 @@
     <div class="pic-contents">
       <h2 class="title">新規投稿作品</h2>
       <ul class="pic-lists">
-        <%#= "each" %>
+        <% @albums.each do |album| %>
           <li class="list">
-            <%#= link_to "#" do %>
+            <%= link_to "#" do %>
               <div class="pic-img-content">
-                <%#= image_tag "#", class: "pic-img" #if pic.image.attached?# %>
+                <%= image_tag album.image, class: "pic-img" if album.image.attached? %>
               </div>
               <div class="pic-info">
                 <div class="pic-title">
-                  <p>日付</p>
-                  <h3>題名</h3>
+                  <p><%= album.created_at %></p>
+                  <h3><%= album.title %>/h3>
                 </div>
                 <div class="pic-text">
                   <div class="text-box">
-                    <p>text</p>
+                    <p><%= album.text %></p>
                   </div>
                 </div>
               </div>
-            <%#= end %>
+            <% end %>
           </li>
-        <%#= end %>
+        <% end %>
         
         <li class="list">
           <div class="pic-img-content">
@@ -48,7 +48,7 @@
             </div>
             <div class="pic-text">
               <div class="text-box">
-                <p>テキストテキスト</p>
+                <p>はいはいし始めた！！</p>
               </div>
             </div>
           </div>
