編集機能実装

--- a/app/views/shared/_album_form.html.erb
+++ b/app/views/shared/_album_form.html.erb
@@ -8,7 +8,7 @@
           <%= f.text_field :title, class: "album-box" %>
         </div>
         <div class="album-field">
-          <label class="album-label">タイトル</label><br>
+          <label class="album-label">画像</label><br>
           <%= f.file_field :image, class:"album-box" %>
         </div>
         <div class="album-field">
