新規相談ページ実装

--- a/app/views/advises/index.html.erb
+++ b/app/views/advises/index.html.erb
@@ -5,13 +5,13 @@
 <div class="advise-main-content">
   <div class="advise-contribution">
     <div class="new-advise-btn">
-      <%= link_to "相談を投稿する", new_album_path, class: "advise_link" %>
+      <%= link_to "相談を投稿する", new_advise_path, class: "advise_link" %>
     </div>
 
     <div class="advise-lists">
       <% @advises.each do |advise| %>
         <div class="advise-text">
-          <%= link_to @advise.title, advise_path(@advise) %>
+          <%= link_to advise.title, advise_path(advise) %>
         </div>
       <% end %>
     </div>
