ビューの実装

--- a/app/assets/stylesheets/album/index.scss
+++ b/app/assets/stylesheets/album/index.scss
@@ -2,12 +2,6 @@
   padding-top: 100px;
 }
 
-.new-album-btn{
-  border: rgb(5, 2, 2) solid 1px;
-  padding: 10px;
-  background-color: rgb(73, 146, 223);
-  border-radius: 10px;
-  color: white;
-  font-weight: bold;
-  box-shadow: 2px 5px 10px 1px #000000;
+.album_link_btn{
+  background-color: rgb(207, 70, 70);
 }
