--- a/app/assets/stylesheets/shared/header.scss
+++ b/app/assets/stylesheets/shared/header.scss
@@ -3,7 +3,7 @@
   position: fixed;
   top: 0;
   z-index: 20;
-  background-color: burlywood;
+  background-color: rgb(254, 233, 205);
 
   .nav{
     margin: 0 auto;
@@ -23,7 +23,8 @@
       }
 
       .head-btn0{
-        background-color: white;
+        margin-top: 10px;
+        width: 300px;
       }
 
         .head-btn1{
