--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -3,13 +3,13 @@
   <%= render "shared/second_header" %>
 
   <div class="album-main-content">
+    <div class="album-content-box">
+      <div class="album-registrations-title">
+        <h2 class="title">写真を投稿する</h2>
+      </div>
 
-    <div class="album-registrations-title">
-      <h2>写真を投稿する</h2>
+      <%= render "shared/album_form" %>
     </div>
-
-    <%= render "shared/album_form" %>
-
   </div>
 
   <%= render "shared/second_footer" %>
