--- a/app/assets/stylesheets/advise/show.scss
+++ b/app/assets/stylesheets/advise/show.scss
@@ -1,17 +1,13 @@
-.album-each-content{
-  width: 80%;
-  margin: 0 auto;
+.advise-show{
   display: flex;
-  justify-content: center;
+  flex-direction: column;
 
-  .each-lists{
-
-    .eachlist{
-      list-style: none;
-      text-align: center;
-
-  
-    }
+  .advise-title{
+    margin: 15px;
+    font-size: 30px;
   }
 
+  .advise-text{
+    margin: 15px;
+  }
 }
