--- a/app/assets/stylesheets/album/new_edit.scss
+++ b/app/assets/stylesheets/album/new_edit.scss
@@ -1,11 +1,19 @@
- 
-  .album-main-content{
-    width: 80%;
-    margin: 0 auto;
+/*adviseのnewにも使用しています。*/
 
-    .album-registrations-title h2{
-      text-align: center;
-      font-size: 50px;
+.album-registrations-wrapper{
+    background-image: url("sweet.jpg");
+
+  .album-main-content{
+    width: 70%;
+    padding-top: 10px;
+    margin: 0 auto;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+
+    .album-content-box{
+      
     }
   }
 
+}
