--- a/app/assets/stylesheets/shared/second_header.scss
+++ b/app/assets/stylesheets/shared/second_header.scss
@@ -1,6 +1,10 @@
 .second-header{
   padding: 20px 0;
   width: 100%;
-  height: 100px;
+  height: 120px;
   background-color: burlywood;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
