--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -9,52 +9,13 @@
 
       <div class="new-contribution">
         <div class="new-album-btn">
-          <%= link_to "新規写真を投稿する", new_album_path %>
+          <%= link_to "新規写真を投稿する", new_album_path, class: "album_link_btn btn" %>
         </div>
       </div>
 
-      <ul class="pic-lists">
-        <% @albums.each do |album| %>
-          <li class="list">
-            <%= link_to album_path(album) do %>
-              <div class="pic-img-content">
-                <%= image_tag album.image, class: "pic-img" if album.image.attached? %>
-              </div>
-              <div class="pic-info">
-                <div class="pic-title">
-                  <p><%= album.created_at %></p>
-                  <h3><%= album.title %></h3>
-                </div>
-                <div class="pic-text">
-                  <div class="text-box">
-                    <p><%= album.text %></p>
-                  </div>
-                </div>
-              </div>
-            <% end %>
-          </li>
-        <% end %>
-        
-        <li class="list">
-          <div class="pic-img-content">
-            <%= image_tag "camera_baby_mother.png", class: "pic-img" %>
-          </div>
-          <div class="pic-info">
-            <div class="pic-title">
-              <p>2021-01-04 07:22:44</p>
-              <b>写真を投稿してね！</b>
-            </div>
-            <div class="pic-text">
-              <div class="text-box">
-                <p>ハイハイし始めた！！</p>
-              </div>
-            </div>
-          </div>
-        </li>
-      </ul>
+      <%= render "shared/bulletin_form" %>
     </div>
   </div>
-
 
   <%= render "shared/footer" %>
 
