--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -18,7 +18,7 @@
               <p><%= @album.text %></p>
             </div>
             <div class="each-btn">
-              <%= link_to "編集をする", edit_album_path(@album) %>
+              <%= link_to "編集をする", edit_album_path(@album), class: "album-edit-btn btn" %>
             </div>
           </div>
         </div>
