--- a/app/views/shared/_second_header.html.erb
+++ b/app/views/shared/_second_header.html.erb
@@ -1,3 +1,5 @@
 <div class="second-header">
-    
+    <div class="second-main">
+      <%= link_to image_tag("main1.png", size: '320x110'), root_path %>
+    </div>
   </div>
