マイページの場所移動

--- a/app/views/advises/index.html.erb
+++ b/app/views/advises/index.html.erb
@@ -2,6 +2,7 @@
 
 <%= render "shared/header" %>
 
+<!--相談ページトップ-->
 <div class="advise-main-content advise-main-upper">
   <div class="advise-contribution">
     <div class="new-advise-btn">
