--- a/app/views/albums/edit.html.erb
+++ b/app/views/albums/edit.html.erb
@@ -2,8 +2,8 @@
 
   <%= render "shared/second_header" %>
 
+  <!--写真編集ページ-->
   <div class="album-main-content">
-
     <div class="album-registrations-title">
       <h2>写真を編集する</h2>
     </div>
