--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -2,6 +2,7 @@
 
   <%= render "shared/second_header" %>
 
+  <!--新規投稿ページ-->
   <div class="album-main-content">
     <div class="album-content-box">
       <div class="album-registrations-title">
