--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -2,6 +2,7 @@
 
 <%= render "shared/second_header" %>
 
+<!--写真詳細ページ-->
 <div class="album-each-content">
   <ul class="each-lists">
     <li class="eachlist">
