--- a/app/assets/stylesheets/advise/show.scss
+++ b/app/assets/stylesheets/advise/show.scss
@@ -1,7 +1,7 @@
 .advise-show{
   display: flex;
   flex-direction: column;
-
+  
   .advise-title{
     margin: 15px;
     font-size: 30px;
@@ -10,4 +10,20 @@
   .advise-text{
     margin: 15px;
   }
+
+  .advise-answer-content{
+
+    .answer-box{
+      width: 300px;
+      height: 150px;
+      font-size: 17px;
+      border: solid 3px rgb(165, 165, 165);
+    }
+
+  .advise-answer-btn{
+    background-color: orange;
+    margin: 15px 0 15px 25px;
+
+  }
+}
 }
