--- a/app/views/pics/index.html.erb
+++ b/app/views/pics/index.html.erb
@@ -1,10 +1,10 @@
 <div class="wrapper">
 
   <%= render "shared/header" %>
-
+  
+  <!--トップページ-->
   <div class="main-pic">
     <div class="main-baby-pic">
-
     </div>
   </div>
   <div class="description">
