モデルのRspec実装

--- a/app/views/advises/new.html.erb
+++ b/app/views/advises/new.html.erb
@@ -12,7 +12,7 @@
       <div class="album-registrations-main">
           <%= form_with model: @advise, local: true do |f| %>
     
-            <%#= render 'shared/error_messages', model: f.object %>
+            <%= render 'shared/error_messages', model: f.object %>
     
             <div class="album-field">
               <label class="album-label">タイトル</label><br>
