--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,7 +5,7 @@
         <li class="head-btn2"><%= link_to "商品ページ", root_path, class:"btn_link" %></li>
         <li class="head-btn3"><%= link_to "相談ページ", advises_path, class:"btn_link" %></li>
         <% if user_signed_in? %>
-          <li class="head-btn1"><%= link_to "マイページ", "/pics/#{current_user.id}", class:"btn_link" %></li>
+          <li class="head-btn1"><%= link_to current_user.nickname, "/pics/#{current_user.id}", class:"btn_link" %></li>
           <li class="head-btn4"><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "btn_link" %></li>
         <% else %>
           <li class="head-btn5"><%= link_to "ログイン", new_user_session_path, class: "btn_link" %></li>
