--- a/app/assets/stylesheets/shared/album_form.scss
+++ b/app/assets/stylesheets/shared/album_form.scss
@@ -6,6 +6,8 @@
   .album-field{
     display: flex;
     flex-direction: column;
+    width: 100%;
+    
     .album-label{
       font-size: 20px;
       font-weight: bold;
@@ -14,13 +16,7 @@
     }
 
     .album-box{
-      width: 250px;
-      height: 50px;
-      margin: 15px;
-    }
-
-    .album-box{
-      width: 250px;
+      width: 400px;
       height: 50px;
       margin: 15px;
     }
