--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -18,9 +18,11 @@
             <div class="each-text">
               <p><%= @album.text %></p>
             </div>
-            <div class="each-btn">
-              <%= link_to "編集をする", edit_album_path(@album), class: "album-edit-btn btn" %>
-            </div>
+            <% if user_signed_in? && current_user.id == @album.user.id %>
+              <div class="each-btn">
+                <%= link_to "編集をする", edit_album_path(@album), class: "album-edit-btn btn" %>
+              </div>
+            <% end %>
           </div>
         </div>
     </li>
