--- a/app/assets/stylesheets/album/edit.scss
+++ b/app/assets/stylesheets/album/edit.scss
@@ -4,4 +4,10 @@
     background-color: rgb(42, 42, 227);
   }
 
+  .album-bottom-btn{
+    margin-top: 40px;
+  .album-delete-btn{
+    background-color: rgb(216, 4, 4);
+  }
+}
 }
