--- a/app/views/albums/edit.html.erb
+++ b/app/views/albums/edit.html.erb
@@ -4,12 +4,13 @@
 
   <!--写真編集ページ-->
   <div class="album-main-content">
+  <div class="album-content-box">
     <div class="album-registrations-title">
-      <h2>写真を編集する</h2>
+      <h2 class="title">写真を編集する</h2>
     </div>
 
     <%= render "shared/album_form" %>
-
+  </div>
   </div>
 
   <%= render "shared/second_footer" %>
