--- a/app/views/advises/show.html.erb
+++ b/app/views/advises/show.html.erb
@@ -28,7 +28,7 @@
     </div>
     <div class="advise-lists">
       <div class="adviselist">
-        <h4>＜コメント一覧></h4>
+        <h4>*＊ コメント一覧 *＊</h4>
         <% if @answers %>
           <% @answers.each do |answer| %>
             <p>
