相談ページのパンくずリスト実装

--- a/app/views/advises/new.html.erb
+++ b/app/views/advises/new.html.erb
@@ -1,7 +1,7 @@
 <div class="album-registrations-wrapper">
-
+  <% breadcrumb :new_advise %>
   <%= render "shared/second_header" %>
-
+  
   <!--相談投稿ページ-->
   <div class="album-main-content">
     <div class="album-content-box">
