--- a/app/views/shared/_bulletin_form.html.erb
+++ b/app/views/shared/_bulletin_form.html.erb
@@ -3,7 +3,7 @@
       <ul class="pic-lists">
         <% @albums.each do |album| %>
           <li class="list">
-            <%= link_to album_path(album) do %>
+            <%= link_to album_path(album), class: "list-link" do %>
               <div class="pic-img-content">
                 <%= image_tag album.image, class: "pic-img" if album.image.attached? %>
               </div>
