--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,6 @@
 <div class="header">
+<p><%= breadcrumbs pretext: "You are here: ",
+                                      separator: "&rsaquo;" %></p>
     <div class="nav">
       <ul>
         <li class="head-btn0"><%= link_to image_tag("main1.png", size: '320x110', class: "btn_link"), root_path %></li>
