--- a/app/views/shared/_second_header.html.erb
+++ b/app/views/shared/_second_header.html.erb
@@ -1,5 +1,11 @@
 <div class="second-header">
+<div>
+<p><%= breadcrumbs pretext: "You are here: ",
+                                      separator: "&rsaquo;" %></p>
+</div>
+<div class="second-content"> 
     <div class="second-main">
       <%= link_to image_tag("main1.png", size: '320x110'), root_path %>
     </div>
+</div>
   </div>
