--- a/app/views/pics/index.html.erb
+++ b/app/views/pics/index.html.erb
@@ -1,5 +1,5 @@
 <div class="wrapper">
-
+  <% breadcrumb :pics%>
   <%= render "shared/header" %>
   
   <!--トップページ-->
@@ -15,8 +15,18 @@
   <div class="pics-introduction">
     <div class="pic-contents">
       <h2 class="title">新規投稿作品</h2>
-    
-  
+
+      <div class="pic-search">
+        <%= form_with(url: search_albums_path, local: true, method: :get, class: "search-form") do |f| %>
+          <div class="search-inside">
+            <%= f.text_field :keyword, placeholder: "記事を検索する", class: "search-box" %>
+          </div>
+          <div class="search-inside">
+            <%= f.submit "検索", class: "search-btn btn" %>
+          </div>
+        <% end %>
+      </div>
+
       <%= render "shared/bulletin_form" %>
     </div>
   </div>
