キーワードで検索できる機能の実装

--- a/app/assets/stylesheets/advise/index.scss
+++ b/app/assets/stylesheets/advise/index.scss
@@ -19,6 +19,7 @@
   .new-advise-btn{
       display: flex;
       justify-content: center;
+      margin-top: 50px;
 
     .advise_link{
       background-color: rgb(80, 165, 80); 
