--- a/app/assets/stylesheets/shared/second_header.scss
+++ b/app/assets/stylesheets/shared/second_header.scss
@@ -1,10 +1,11 @@
 .second-header{
-  padding: 20px 0;
   width: 100%;
-  height: 120px;
   background-color: burlywood;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
+  padding-top: 5px;
+  .second-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 5px;
+  }
 }
