レスポンスデザイン（600のみ）実装

--- a/app/assets/stylesheets/advise/index.scss
+++ b/app/assets/stylesheets/advise/index.scss
@@ -33,7 +33,7 @@
     border: 8px solid rgb(157, 157, 157);
     width: 100%;
     margin-bottom: 50px;
-    padding: 10px 50px;
+    padding: 10px 0;
     
     .advise-text{
       margin: 20px 0;
