--- a/app/assets/stylesheets/shared/album_form.scss
+++ b/app/assets/stylesheets/shared/album_form.scss
@@ -13,6 +13,8 @@
       font-weight: bold;
       text-align: center;
       color: rgb(227, 114, 15);
+      margin: 10px 0;
+      
     }
 
     .album-box{
@@ -34,5 +36,15 @@
         border-radius: 15px;
       }
   }
+  }
+}
+
+@media (max-width: 600px) {
+  .album-registrations-main {
+    .album-inside {
+      .album-box {
+        width: 250px;
+      }
+    }
   }
 }
