--- a/app/assets/stylesheets/shared/error_message.scss
+++ b/app/assets/stylesheets/shared/error_message.scss
@@ -1,11 +1,12 @@
 .error-alert {
-  display: flex;
+  display: block;
   justify-content: center;
   margin-bottom: 5vh;
+
 }
 
 .error-message {
   font-size: 1.3vw;
-  list-style: circle;
+  list-style: none;
   color: rgb(182, 48, 0);
 }
