--- a/app/views/shared/_album_form.html.erb
+++ b/app/views/shared/_album_form.html.erb
@@ -7,7 +7,7 @@
         
 
         <div class="album-field">
-          <label class="album-label">タイトル</label><br>
+          <label class="album-label">タイトル</label>
           <div class="album-inside">
             <%= f.text_field :title, class: "album-box" %>
           </div>
@@ -31,3 +31,4 @@
         </div>
       <% end %>
     </div>
+
