--- a/app/assets/stylesheets/album/show.scss
+++ b/app/assets/stylesheets/album/show.scss
@@ -5,7 +5,7 @@
   justify-content: center;
 
   .each-lists{
-
+    padding: 0;
     .eachlist{
       list-style: none;
       text-align: center;
@@ -20,3 +20,15 @@
 
 }
 
+@media (max-width: 600px) {
+  .album-each-content {
+    .each-lists {
+      .eachlist {
+        .each-img {
+          width: 90vw;
+          height: 40vh;
+        }
+      }
+    }
+  }
+}
