--- a/app/assets/stylesheets/shared/bulletin_form.scss
+++ b/app/assets/stylesheets/shared/bulletin_form.scss
@@ -26,7 +26,9 @@
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-     
+      padding: 0;
+
+    
       .list{
         width: 350px;
         margin: 20px;
@@ -83,3 +85,12 @@
   }
 }
 
+@media (max-width: 600px) {
+  .title {
+    font-size: 25px;
+  }
+
+  .pics-introduction {
+    width: 100%;
+  }
+}
