--- a/app/views/advises/new.html.erb
+++ b/app/views/advises/new.html.erb
@@ -15,12 +15,16 @@
             <%= render 'shared/error_messages', model: f.object %>
     
             <div class="album-field">
-              <label class="album-label">タイトル</label><br>
-              <%= f.text_field :title, class: "album-box" %>
+              <label class="album-label">タイトル</label>
+              <div class="album-inside">
+                <%= f.text_field :title, class: "album-box" %>
+              </div>
             </div>
             <div class="album-field">
-              <label class="album-label">テキスト</label><br>
-              <%= f.text_field :text, class: "album-box" %>
+              <label class="album-label">テキスト</label>
+              <div class="album-inside">
+                <%= f.text_field :text, class: "album-box" %>
+              </div>
             </div>
             <div class="album-field">
               <div class="album-bottom">
