--- a/app/assets/stylesheets/album/show.scss
+++ b/app/assets/stylesheets/album/show.scss
@@ -18,7 +18,31 @@
     }
   }
 
+  // いいね機能部分
+ul.like-content {
+  padding-left: 0;
+  list-style: none;
+  
+  .like-link {
+    text-decoration: none;
+    color: gray;
+    border: 1px solid rgb(162, 162, 162);
+    border-radius: 50px;
+    padding: 5px;
+  
+    
+    .like-part2 {
+      color: rgb(255, 60, 93);
+    }
+  }
 }
+
+}
+
+.like-link:hover {
+  background: rgb(245, 245, 245);
+}
+
 
 @media (max-width: 600px) {
   .album-each-content {
@@ -32,3 +56,4 @@
     }
   }
 }
+
