RakutenAPI、商品ページ表示部分実装

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,7 +4,7 @@
     <div class="nav">
       <ul>
         <li class="head-btn0"><%= link_to image_tag("main1.png", size: '320x110', class: "btn_link"), root_path %></li>
-        <li class="head-btn2"><%= link_to image_tag("animalface_duck.png", size: '80x80', class: "btn_link"), root_path %><p>商品ページ</p></li>
+        <li class="head-btn2"><%= link_to image_tag("animalface_duck.png", size: '80x80', class: "btn_link"), rakuten_search_path %><p>商品ページ</p></li>
         <li class="head-btn3"><%= link_to image_tag("animalface_ushi.png", size: '80x80', class: "btn_link"),advises_path %><p>相談ページ</p></li>
         <% if user_signed_in? %>
           <li class="head-btn1"><%= link_to image_tag("animalface_saru.png", size: '80x80', class: "btn_link"), "/users/#{current_user.id}", class:"btn_link" %><p><%= current_user.nickname  %></p></li>
